# eigenfaces

./: .gitignore  CMakeLists.txt  README.md
src/: eigenfaces.cpp  eigenfaces.h  file_functions.cpp  file_functions.h  main.cpp  set_definitions.h
